--- a/PieChart.html
+++ b/PieChart.html
@@ -56,7 +56,7 @@
         type: 'polarArea',
         data: {
             labels: [
-                'Syrup', 'Milk', 'Yogurt', 'Chocolate', 'Flour'
+                'Syrup', 'Milk', 'Yogurt', 'Chocolate', 'Flour', 'Eggs', 'Honey', 'Nuggets'
             ],
             datasets: [{
                 label: 'i love pancakes!!!! (im lying)',
@@ -67,6 +67,9 @@
                     'rgb(255, 28, 51)',
                     'rgb(231, 151, 61)',
                     'rgb(100, 96, 71)',
+                    'rgb(152, 92, 25)',
+                    'rgb(50, 25, 71)',
+                    'rgb(41, 12, 51)',
                 ]
             }]
         },
